--- a/src/components/Blog/Blog.scss
+++ b/src/components/Blog/Blog.scss
@@ -3,12 +3,10 @@
 .blog {
     background-color: $veryLightGray;
 
-    &__content {}
-
     &__grid {
         display: grid;
         gap: 1.875rem;
-    
+
 
         //grid-template-columns: repeat(auto-fit, minmax(14.375rem, 1fr));
         grid-template-columns: 1fr;
@@ -85,4 +83,39 @@
             color: $lightGrayishBlue;
         }
     }
+}
+
+.blogItem {
+    &__image {
+        background-size: cover;
+        background-position: center center;
+        position: relative;
+        z-index: 1;
+
+        .container {
+            position: relative;
+            z-index: 2;
+        }
+    }
+
+    &__image::before {
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 100%;
+        background: $veryDarkGray;
+        opacity: 0.75;
+
+    }
+
+    &__title {
+        color: $white;
+    }
+
+    &__author {
+        font-size: 0.85rem;
+        color: $white;
+    }
+
+    
 }
