--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,6 +5,7 @@
     position: sticky;
     top: 0px;
     z-index: 10;
+    box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.5);
 
     nav {
         padding-top: 1.0625rem;
@@ -23,45 +24,10 @@
 
     }
 
-    .dark-mode-btn {
-        position: relative;
-        display: flex;
-        justify-content: space-between;
-        width: 3.1875rem;
-        height: 1.625rem;
-        padding: 0.3125rem;
-        border-radius: 3.125rem;
-        background-image: linear-gradient(to right, $limeGreen, $brightCyan);
-        border: 0px;
-        cursor: pointer;
-
-
-        &::before {
-            content: '';
-            position: absolute;
-            top: 0.0625rem;
-            left: 0.0625rem;
-            display: block;
-            width: 1.5rem;
-            height: 1.5rem;
-            border-radius: 50%;
-            background-color: $white;
-            transition: left 0.2s ease-in;
-        }
-
-        .dark-mode-btn__icon {
-            position: relative;
-            z-index: 9;
-        }
-
-        &--active::before {
-            left: 1.625rem;
-        }
-
-    }
 
     &__toggle {
         // Mobile Menu Toggle
+        cursor: pointer;
 
         >span {
             display: block;
@@ -89,6 +55,7 @@
         padding: 1.625rem;
         border-radius: 5px;
         margin-top: 1.5rem;
+        top: 3rem;
         z-index: 1;
 
         a {
@@ -99,38 +66,36 @@
         }
     }
 
-    &__links {
-        a {
-            position: relative;
-            font-size: $font-sm;
-            color: $grayishBlue;
-            transition: color 300ms ease-in-out;
+    &__link {
+        position: relative;
+        font-size: $font-sm;
+        color: $grayishBlue;
+        transition: color 300ms ease-in-out;
 
-            &:not(:last-child) {
-                margin-right: 32px;
-            }
+        &:not(:last-child) {
+            margin-right: 32px;
+        }
+
+        &::before {
+            content: "";
+            display: block;
+            position: absolute;
+            height: 5px;
+            left: 0px;
+            right: 0px;
+            bottom: -1.9375rem;
+            background: linear-gradient(to right, $limeGreen, $brightCyan);
+            opacity: 0;
+            transition: opacity 300ms ease-in-out;
+        }
+
+
+
+        &:hover, &.active {
+            color: $darkBlue;
 
             &::before {
-                content: "";
-                display: block;
-                position: absolute;
-                height: 5px;
-                left: 0px;
-                right: 0px;
-                bottom: -30px;
-                background: linear-gradient(to right, $limeGreen, $brightCyan);
-                opacity: 0;
-                transition: opacity 300ms ease-in-out;
-            }
-
-
-
-            &:hover {
-                color: $darkBlue;
-
-                &::before {
-                    opacity: 1;
-                }
+                opacity: 1;
             }
         }
     }
